# spen_recons

./: .gitignore  README.md  pyproject.toml
dataset/: spen_dataset_0125.py  spen_dataset_0309.py
preprocess/: 0325_process_high_res_rat_2000.py
script/: 0125_pm_lr_test.py  0127_ddpm_brain.py  0309_spen_demo.ipynb  0309_spen_unsupervised_training.py  0319_pm_lr_real_data.py  0320_pm_lr_test.py  0320_spen_unsupervised_training.py  0322_pm_lr_real_data.py  0323_scanner_data_phase_map.py  0323_spen_traditional_recons.ipynb  0324_unsupervised_scanner_test.py  0325_end_to_end.py  0326_end_to_end_scanner_test.py  0326_pm_lr_train.py  0402_matrix_scanner_test.py  0402_spen_matrix_recons.py  0403_unrolling.py  0403_unrolling_test.py  0414_spen_paper_unsupervised_train.py  0415_unsupervised_train.md  0415_unsupervised_train.py  0416_supervised_phase_train.py  0417_supervised_train.md  0417_supervised_train_v1.py  0417_supervised_train_v2.py  README.md
skill/: spen_recons_skill.md  周报.md
util/: logger_0125.py  physical_model_0125.py  utils_0125.py
